tests/ui/impl-trait/precise-capturing/ordering.stderr
warning: the feature `precise_capturing` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/ordering.rs:1:12
   |
LL | #![feature(precise_capturing)]
   |            ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #123432 <https://github.com/rust-lang/rust/issues/123432> for more information
   = note: `#[warn(incomplete_features)]` on by default

error: cannot capture parameter `'a` twice
  --> $DIR/ordering.rs:4:33
   |
LL | fn lt<'a>() -> impl Sized + use<'a, 'a> {}
   |                                 ^^  -- parameter captured again here

error: cannot capture parameter `T` twice
  --> $DIR/ordering.rs:7:32
   |
LL | fn ty<T>() -> impl Sized + use<T, T> {}
   |                                ^  - parameter captured again here

error: cannot capture parameter `N` twice
  --> $DIR/ordering.rs:10:45
   |
LL | fn ct<const N: usize>() -> impl Sized + use<N, N> {}
   |                                             ^  - parameter captured again here

error: lifetime parameter `'a` must be listed before non-lifetime parameters
  --> $DIR/ordering.rs:13:45
   |
LL | fn ordering<'a, T>() -> impl Sized + use<T, 'a> {}
   |                                          -  ^^
   |                                          |
   |                                          move the lifetime before this parameter

error: aborting due to 4 previous errors; 1 warning emitted

